# api-middleware

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  VERCEL_DEPLOY.md  crontab.example  docker-compose.dev.yml  init_db.py  pyproject.toml  render.yaml  requirements.txt  sync_contacts.py  test_api.py  test_api.sh  test_api_improved.py  test_import.py  test_vercel.sh  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  index.py
app/: config.py  database.py  db_client.py  main.py  models.py  odoo_client.py  security.py
scripts/: install_cron.sh  run_integration_tests.sh  run_server.sh  run_tests.sh  sync_with_env.sh
tests/: README.md  __init__.py  test_contacts.py  test_odoo_client.py
tests/integration/: __init__.py  test_integration.py
tests/scripts/: README.md  test_import.py  test_odoo_complete.py  test_vercel.py  test_vercel_debug.py
