[project]
name = "odoo-fastapi-api"
version = "0.1.0"
description = "FastAPI proxy vers Odoo (contacts) avec JWT + HMAC"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "pydantic-settings",
    "python-multipart",
    "sqlalchemy",
    "psycopg2-binary",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-mock",
]

[tool.pytest.ini_options]
# Exclure les fichiers de test Vercel (ils font des appels HTTP réels)
testpaths = ["tests"]
python_files = ["test_*.py"]
# Exclure les fichiers de test Vercel qui font des appels HTTP réels
norecursedirs = [".git", ".venv", "__pycache__", "*.egg"]

