[project]
name = "odoo-fastapi-api"
version = "1.0.0"
description = "FastAPI proxy vers Odoo (contacts) avec JWT + HMAC"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-jose[cryptography]",
    "pydantic-settings",
    "python-multipart",
    "sqlalchemy",
    "psycopg2-binary",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-mock",
]

[tool.pytest.ini_options]
# Exclure les fichiers de test Vercel (ils font des appels HTTP réels)
testpaths = ["tests"]
python_files = ["test_*.py"]
# Exclure les scripts de test manuels et autres dossiers
norecursedirs = [".git", ".venv", "__pycache__", "*.egg", "scripts", "integration"]